Refactor: Use Collectors.toList() instead of toList()
Co-authored-by: valentinaromero2003.c <valentinaromero2003.c@gmail.com>